--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 </ul>
                 <ul class="header__contact">
                     <li><span class="overhead">Birthday</span>09 September</li>
-                    <li><span class="overhead">location</span>Việt Nam - Quảng Nam</li>
+                    <li><span class="overhead">location</span>Việt Nam</li>
                 </ul>
             </div>
         </div>
@@ -93,8 +93,7 @@
                             <div class="about" style="display: block;">
                                 <div class="title_home">
                                     <h1 class="title title--h1 title__separate">About me</h1>
-                                    <p>Tôi sinh ra và lớn lên ở Việt Nam. Trong suốt hơn 15 năm và tôi đã không ngừng tìm tòi và học hỏi để trở nên tốt hơn. Sở thích của tôi là tìm hiểu những điều mới lạ, nghe nhạc, thỉnh thoảng là giải trí cùng bạn bè qua
-                                        những tựa game nổi tiếng.
+                                    <p>Tôi sinh ra và lớn lên ở Việt Nam.
 
                                     </p>
                                 </div>
@@ -286,8 +285,7 @@
                             <div class="contact">
                                 <h1 class="title title--h1 title__separate">Contact</h1>
                                 <div class="mapContact">
-                                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d19490.838502671362!2d108.29540366634177!3d15.845950215662835!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31420ec4f86a2699%3A0x51cfc30f9566e44d!2zRHV5IFBoxrDhu5tjLCBUcC4gSOG7mWkgQW4sIFF14bqjbmcgTmFtLCBWaeG7h3QgTmFt!5e1!3m2!1svi!2s!4v1650765986255!5m2!1svi!2s"
-                                        allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                                    
                                 </div>
 
                                 <h4 class="title title--h4">Contact Form</h1>
